used base64 built in classes